Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/T8042759/ImplicitLambdaConsideredForApplicabilityTest.out
ImplicitLambdaConsideredForApplicabilityTest.java:26:9: compiler.err.ref.ambiguous: foo, kindname.method, foo(ImplicitLambdaConsideredForApplicabilityTest.A), ImplicitLambdaConsideredForApplicabilityTest, kindname.method, foo(ImplicitLambdaConsideredForApplicabilityTest.C), ImplicitLambdaConsideredForApplicabilityTest
1 error
